--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 nav a {
-    margin: 0 15px;
-    font-size: 20px;
+    margin: 0 3px;
+    font-size: 18px;
     font-weight: 500;
+    padding: 10px ;
+    display: inline-block;
 }
